# dokploy-cpp-app

./: .dockerignore  .foo-secret  .gitignore  Dockerfile  Makefile  docker-compose.yml  main.cpp  meson.build
.github/workflows/: docker-build.yml
scripts/: deploy.py
src/: main.cpp
subprojects/: cpp-httplib.wrap
www/: index.html
